--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,14 +20,19 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "react/prop-types": "off",
         "no-use-before-define": "off",
-        "@typescript-eslint/no-use-before-define": ["error"],
         "react/jsx-filename-extension": [ "warn", {"extensions": [".tsx"]} ],
         "import/extensions": [
             "error",
             "ignorePackages",
             { "ts": "never", "tsx": "never" }
-        ]
+        ],
+        "no-console": "off",
+        "no-shadow": "off",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": "warn",
+        "@typescript-eslint/no-use-before-define": ["error"]
     },
     "settings": {
         "import/resolver": {
