--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "howler": "^2.2.3",
     "lottie-web": "^5.7.13",
     "node-sass": "4.14.1",
     "react": "^17.0.2",
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/howler": "^2.2.5",
     "@types/react-router-dom": "^5.3.2",
     "@types/react-transition-group": "^4.4.4",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
