--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "framer-motion": "^6.5.0",
     "howler": "^2.2.3",
     "lottie-web": "^5.7.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "6",
     "react-scripts": "4.0.3",
-    "react-transition-group": "^4.4.2",
     "sass": "^1.53.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -44,8 +44,6 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.3.2",
-    "@types/react-transition-group": "^4.4.4",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
     "@typescript-eslint/parser": "^5.3.1",
     "eslint": "^7.32.0",
